fixed padding and gap

--- a/src/sass/components/_scanning.scss
+++ b/src/sass/components/_scanning.scss
@@ -299,12 +299,11 @@
   .scann__title {
     @include font(700, 24px, 1.25, $accentTextColor);
     margin-bottom: 24px;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 28px;
   }
 
   .scann__list {
-    row-gap: 32px;
+    gap: 32px;
   }
 
   .scann__item-1::before,
@@ -330,10 +329,14 @@
     padding-bottom: 80px;
   }
 
+  .scann__box {
+    padding: 0 32px;
+  }
+
   .scann__title {
     @include font(700, 36px, 1.25, $accentTextColor);
     margin-bottom: 40px;
-    padding-left: 149px;
+    padding-left: 117px;
   }
 
   .scann__list {
